company name update

--- a/faq.html
+++ b/faq.html
@@ -629,10 +629,13 @@
             data-wow-delay=".1s"
           >
             <div class="footer__widget mb-30">
-              <div class="footer-log mb-20">
+              <div class="footer-log" style="margin-bottom: 5px">
                 <a href="index.html" class="logo-footer">
                   <img src="assets/img/logo/header_logo_one.png" alt="" />
                 </a>
+                <p style="font-size: 10px">
+                  EDENTU LEARNING SOLUTIONS PRIVATE LIMITED
+                </p>
               </div>
               <p>
                 The best guide you could ever get for your dental learning. A
