--- a/contact.html
+++ b/contact.html
@@ -364,7 +364,7 @@
                   <h2>Get In Touch With Us</h2>
 
                 </div>
-                <div class="single-contact-box d-flex align-items-center  cb-1 mb-30" ">
+                <div class="single-contact-box d-flex align-items-center  cb-1 mb-30" >
                   <div class="contact__iocn">
                     <img
                       src="assets/img/icon/material-location-on.svg"
@@ -372,7 +372,7 @@
                     />
                   </div>
                   <div class="contact__text">
-                    <h5>14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561</h5>
+                    <h5>Edentu Learning Solutions Private Limited, 14/291 N, Suit 61 A, First Floor, A Square, Kuzhivelippady, Cochin, Kerala-683561</h5>
                   </div>
                 </div>
                 <div class="single-contact-box d-flex align-items-center  cb-2 mb-30" style="flex-wrap: wrap;">
@@ -421,10 +421,11 @@
             data-wow-delay=".1s"
           >
             <div class="footer__widget mb-30">
-              <div class="footer-log mb-20">
+               <div class="footer-log " style="margin-bottom: 5px;">
                 <a href="index.html" class="logo-footer">
                   <img src="assets/img/logo/header_logo_one.png" alt="" />
                 </a>
+                <p style="font-size:10px;"> EDENTU LEARNING SOLUTIONS PRIVATE LIMITED</p>
               </div>
               <p>
                 The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively.
@@ -447,7 +448,7 @@
                 <li><a href="mailto:info@edentu.com">info@edentu.com</a></li>
                 <li><a href="tel:+919207444480">+91 9207 444 480</a></li>
                 <li><b>Address:</b><br>
-                14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
+                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED 14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
                 </li>
               </ul>
             </div>
