--- a/instructor.html
+++ b/instructor.html
@@ -798,10 +798,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
             data-wow-delay=".1s"
           >
             <div class="footer__widget mb-30">
-              <div class="footer-log mb-20">
+               <div class="footer-log " style="margin-bottom: 5px;">
                 <a href="index.html" class="logo-footer">
                   <img src="assets/img/logo/header_logo_one.png" alt="" />
                 </a>
+                <p style="font-size:10px;"> EDENTU LEARNING SOLUTIONS PRIVATE LIMITED</p>
               </div>
               <p>
                 The best guide you could ever get for your dental learning. A comprehensive, all-encompassing solution to learn the dental curriculum effectively.
@@ -824,7 +825,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                 <li><a href="mailto:info@edentu.com">info@edentu.com</a></li>
                 <li><a href="tel:+919207444480">+91 9207 444 480</a></li>
                 <li><b>Address:</b><br>
-                14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
+                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED, 14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
                 </li>
               </ul>
             </div>
