--- a/about.html
+++ b/about.html
@@ -548,7 +548,7 @@
                         >
                       </h4>
                       <p>
-                        Oral and Maxillofacial Surgeon<br />(Academic Director)
+                       BDS, MDS Oral and Maxillofacial Surgeon<br />(Academic Director)
                       </p>
                     </div>
                   </div>
@@ -563,7 +563,7 @@
                       <h4 class="sub-title mb-10">
                         <a href="instructor-profile.html">Dr. Nandini</a>
                       </h4>
-                      <p>Anatomy</p>
+                      <p>MBBS, MD Anatomy</p>
                     </div>
                   </div>
                 </div>
@@ -577,7 +577,7 @@
                       <h4 class="sub-title mb-10">
                         <a href="instructor-profile.html">Dr. Gopikrishnan V</a>
                       </h4>
-                      <p>Oral Pathology & General Pathology</p>
+                      <p>MDS Oral Pathology & General Pathology, FNHP(MCC) Senior Resident, PGIDS</p>
                     </div>
                   </div>
                 </div>
@@ -593,7 +593,7 @@
                           >Dr. Shreshta Sathish</a
                         >
                       </h4>
-                      <p>Prosthodontist</p>
+                      <p>MDS Prosthodontist and Implantologist</p>
                     </div>
                   </div>
                 </div>
