--- a/index.html
+++ b/index.html
@@ -2177,9 +2177,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
 <!-- Include any necessary CSS and JavaScript libraries, such as Bootstrap and jQuery. -->
 <script>
   function fetchApiData() {
+     console.log('called function')
     fetch('https://app.conext.in/Edentu/api/latest-popup/')
       .then(response => response.json())
       .then(data => {
+        console.log(data, 'response popup')
         if (data.poster && data.button_title) {
           Swal.fire({
             confirmButtonText: data.button_title,
@@ -2201,14 +2203,14 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
   }
 
   // Call the function to display the API response and trigger the modal on page load
-  window.onload = fetchApiData;
+  window.onload = fetchApiData();
 </script>
 
 
 
 <script>
    function formatDate(dateString) {
-    console.log(dateString,'date');
+ 
         const date = new Date(dateString);
         const options = { year: "numeric", month: "long", day: "numeric" };
         return date.toLocaleDateString("en-US", options);
@@ -2217,10 +2219,10 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
     function createBlogItem(item, containerType) {var newsDate; 
       var achiDate; 
       if (containerType==='blogContainer') {
-         console.log(item.news_date,'News date');
+        
          newsDate = formatDate(item.news_date);
       }else{
-         console.log(item.date,'date');
+       
          achiDate = formatDate(item.date);
       }
         const container = document.createElement("div");
