--- a/index.html
+++ b/index.html
@@ -2087,8 +2087,9 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
               <ul class="fot-list">
                 <li><a href="about.html">About US</a></li>
                 <li><a href="index.html#edentu-about">Our Speciality</a></li>
-                <li><a href="index.html#course-section">Our Courses</a></li>
+                <li><a href="index.html#course-section">Our Courses</a></li> 
                 <li><a href="instructor.html">Our Instructors</a></li>
+                <li><a href="assets/privacy_policy/document.pdf">Privacy Policy</a></li>
               </ul>
             </div>
           </div>
@@ -2139,8 +2140,9 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
             <div class="col-lg-12">
               <div class="copyright text-center">
                 <h5>
-                  Copyright@ 2023 <a href="#">Edentu</a>. All Rights Reserved
+                  Copyright@ 2023 <a href="assets/privacy_policy/document.pdf">Edentu</a>. All Rights Reserved
                 </h5>
+              
               </div>
             </div>
           </div>
