--- a/blog-details.html
+++ b/blog-details.html
@@ -1092,7 +1092,7 @@
                 <li><a href="index.html#edentu-about">Our Speciality</a></li>
                 <li><a href="index.html#course-section">Our Courses</a></li>
                 <li><a href="instructor.html">Our Instructors</a></li>
-                <li><a href="assets/privacy_policy/document.pdf">Privacy Policy</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
               </ul>
             </div>
           </div>
