--- a/instructor.html
+++ b/instructor.html
@@ -841,7 +841,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                 <li><a href="index.html#edentu-about">Our Speciality</a></li>
                 <li><a href="index.html#course-section">Our Courses</a></li>
                 <li><a href="instructor.html">Our Instructors</a></li>
-                <li><a href="assets/privacy_policy/document.pdf">Privacy Policy</a></li>
+                <li><a href="privacy-policy.html">Privacy Policy</a></li>
               </ul>
             </div>
           </div>
