--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>About | Edentu</title>
+    <title>Privacy Policy | Edentu</title>
     <meta
       name="keywords"
       content="online education, e-learning, coaching, education, teaching, learning"
