terms & conditions and privacy policy update

--- a/about.html
+++ b/about.html
@@ -678,9 +678,10 @@
               <h6 class="widget-title mb-35">Quick Links</h6>
               <ul class="fot-list">
                 <li><a href="about.html">About US</a></li>
-                <li><a href="index.html#edentu-about">Our Speciality</a></li>
+                 
                 <li><a href="index.html#course-section">Our Courses</a></li>
-                <li><a href="instructor.html">Our Instructors</a></li>
+                 <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
+                <li><a href="user-agreement.html">User Agreement</a></li>
                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
               </ul>
             </div>
