--- a/index.html
+++ b/index.html
@@ -2086,9 +2086,10 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
               <h6 class="widget-title mb-35">Quick Links</h6>
               <ul class="fot-list">
                 <li><a href="about.html">About US</a></li>
-                <li><a href="index.html#edentu-about">Our Speciality</a></li>
+                 
                 <li><a href="index.html#course-section">Our Courses</a></li> 
-                <li><a href="instructor.html">Our Instructors</a></li>
+                 <li><a href="terms-and-conditions.html">Terms & Conditions</a></li>
+                <li><a href="user-agreement.html">User Agreement</a></li>
                 <li><a href="privacy-policy.html">Privacy Policy</a></li>
               </ul>
             </div>
