policy mail and contact update

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -452,7 +452,7 @@
           The following privacy policy is being published in accordance with the provisions of the Information Technology Act, 2000 and other applicable Rules there under, including but not limited to the Information Technology acts rules, guidelines.
         </p>
         <p style="font-size: 1.2rem;line-height: 30px; padding-bottom: 20px;"  id="misc_children">
-          This Privacy Policy explains the policy of Edentu learning solutions (hereinafter referred to as "the Website") and application (hereinafter referred to as "the App"), with respect to the disclosure, collection, storage, usage and protection of your information during the course of your interaction with the Website and the App.
+          This Privacy Policy explains the policy of www.edentu.com (hereinafter referred to as "the Website") and Edentu MDS Official App (hereinafter referred to as "the App"), with respect to the disclosure, collection, storage, usage and protection of your information during the course of your interaction with the Website and the App.
         </p>
         <p style="font-size: 1.2rem;line-height: 30px; padding-bottom: 20px;"  id="misc_children">
          Please read this Privacy Policy carefully and in conjunction with the Terms of Use. If you do not understand this policy, or do not accept any part of it, then you should not use the Platform, as the case may be. Your use and/or continued use of the Platform, as the case may be amounts to express consent to the terms of this Privacy Policy as well as the Terms of Use.
@@ -576,7 +576,7 @@
          <b>HOW TO DELETE YOUR EDENTU LEARNING SOLUTIONS ACCOUNT?</b>
         </p>
         <p style="font-size: 1.2rem;line-height: 30px; padding-bottom: 20px;"  id="misc_children">
-          All you need to do is send an email to ………………………………….(Mail Id)asking them to delete your E dentu Learning Solutions account and the associated data with it
+          All you need to do is send an email to <a style="color: #1a75bc;" href="mailto:info@edentu.com">info@edentu.com</a> asking them to delete your Edentu Learning Solutions account and the associated data with it
         </p>
         <p style="font-size: 1.2rem;line-height: 30px; padding-bottom: 20px;"  id="misc_children">
          Once you receive a reply from them, you’ll have seven days to reply to their email with a valid ID proof and confirmation to delete the account. If you don’t send the confirmation, your account won’t be deleted, and the request will be abandoned.
@@ -585,7 +585,7 @@
          <b>CONTACT US</b>
         </p>
         <p style="font-size: 1.2rem;line-height: 30px; padding-bottom: 20px;"  id="misc_children">
-          If you have any questions or concerns regarding the Privacy Policy, kindly contact us at ………………………………(mail id).
+          If you have any questions or concerns regarding the Privacy Policy, kindly contact us at <a style="color: #1a75bc;" href="mailto:info@edentu.com">info@edentu.com</a>.
         </p>
       </section>
 
