--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -606,7 +606,7 @@
 
          
            <ul>
-            <li>Notice: All notices served by the Company shall be provided via email to your account or as a general notification on the Application. Any notice to be provided to the Company should be sent to ………………………………..(mail id)</li>
+            <li>Notice: All notices served by the Company shall be provided via email to your account or as a general notification on the Application. Any notice to be provided to the Company should be sent to <a style="color: #1a75bc;" href="mailto:info@edentu.com">info@edentu.com</a></li>
             <li>Entire Agreement: The Terms, along with the Privacy Policy, and any other guidelines made applicable to the Application from time to time, constitute the entire agreement between the Company and You with respect to your access to or use of the Application, Website and the Services thereof.</li>
             <li>
               Assignment: You cannot assign or otherwise transfer your obligations under the Terms, or any right granted hereunder to any third party. The Company’s rights under the Terms are freely transferable by the Company to any third parties without the requirement of seeking your consent.
@@ -642,7 +642,7 @@
             <b style="color: black;font-size: 1.3rem;">
               Customer Care:
             </b>
-        <ul> We make all best endeavors to provide you with a pleasant experience. In the unlikely event that you face any issues, please contact us at ……………………………<i>(Mail id)</i>.</ul> 
+        <ul> We make all best endeavors to provide you with a pleasant experience. In the unlikely event that you face any issues, please contact us at <a style="color: #1a75bc;" href="mailto:info@edentu.com">info@edentu.com</a>.</ul> 
           </li>
         </ol>
       </section>
