google tag added to the head

--- a/404.html
+++ b/404.html
@@ -89,6 +89,20 @@
         src="https://www.facebook.com/tr?id=3239696792990782&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Meta Pixel Code -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-XGT3BDT83C"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-XGT3BDT83C");
+    </script>
   </head>
 
   <body>
