--- a/assets/fonts/flaticon.html
+++ b/assets/fonts/flaticon.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-T6TVDB6F");
+    </script>
+    <!-- End Google Tag Manager -->
     <title>Flaticon Webfont</title>
     <link rel="stylesheet" type="text/css" href="flaticon.css" />
     <meta charset="UTF-8" />
@@ -499,6 +513,16 @@
     </script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-T6TVDB6F"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header>
       <a href="https://www.flaticon.com/" target="_blank" class="logo">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 394.3 76.5">
