Loadmore button changed

--- a/index.html
+++ b/index.html
@@ -1742,7 +1742,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                 class="col-lg-12 text-center mt-20 mb-30 wow fadeInUp2 animated"
                 data-wow-delay=".4s"
               >
-                <a href="blog-details.html" class="theme_btn">Load More</a>
+                <!-- <a href="blog-details.html" class="theme_btn">Load More</a> -->
               </div>
             </div>
              </div>
