Updated free taril

--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <img
                   src="assets/img/7-days-free-trial.png"
                    alt=""
-                   style="width: 200px; border-radius: 20px; margin-bottom: 20px; animation: blinker 3s linear infinite; animation-name: blinker;"
-                 /><br></a>
+                   style="width: 200px; border-radius: 20px;  animation: blinker 3s linear infinite; animation-name: blinker;"
+                 /><br>Click here to get a free trial<br></a><br>
                   <ul
                     class="search__area d-md-inline-flex d-flex align-items-center "
                   >
