Added new heading and content for registration

--- a/index.html
+++ b/index.html
@@ -611,12 +611,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h5  class="mb-35 wow fadeInUp2 d-md-none animated main-header" data-wow-delay=".2s">
                     A Comprehensive , all encompassing solution you could ever get for an adaptive  & technology  integrated   learning experience through out your journey from BDS to NEET MDS
                   </h5>
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeN5Q1n_s_ceMomUmRUqlXigyDriDiUPI009KG_1dETml3law/viewform">
+                  <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSeN5Q1n_s_ceMomUmRUqlXigyDriDiUPI009KG_1dETml3law/viewform">
                   <img
                   src="assets/img/7-days-free-trial.png"
                    alt=""
                    style="width: 200px; border-radius: 20px;  animation: blinker 3s linear infinite; animation-name: blinker;"
-                 /><br>Click here to get a free trial<br></a><br>
+                 /><br>Click here to get a free trial<br></a><br> -->
+
+                  <h2 style="font-size: 24px; font-weight: bold; margin-top: 20px;">Get 7 Days Free Access to Contents</h2>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeN5Q1n_s_ceMomUmRUqlXigyDriDiUPI009KG_1dETml3law/viewform" style="background-color: #007bff; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; margin-top: 10px; margin-bottom: 10px; display: inline-block; text-decoration: none;">Register Here</a>
+                  </div>
+                  
                   <ul
                     class="search__area d-md-inline-flex d-flex align-items-center "
                   >
