--- a/index.html
+++ b/index.html
@@ -2107,6 +2107,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
               </p>
               <div class="social-media footer__social mt-30">
                 <a target="_blank" href="https://www.instagram.com/edentu_mds/?igshid=MzRlODBiNWFlZA%3D%3D"><i class="fab fa-instagram"></i></a>
+                <a target="_blank" href="https://www.instagram.com/edentu_app?igsh=bXdtdTNzOXllaXNh"><i class="fab fa-instagram"></i></a>
                 <a target="_blank" href=" https://t.me/edentuapp"><i class="fab fa-telegram-plane"></i></a>
                 <a target="_blank" href="https://youtube.com/@Edentu.official?si=YCRUTut2WW-AObva"><i class="fab fa-youtube"></i></a>
                 <a target="_blank" href="https://www.facebook.com/edentu.official/"><i class="fab fa-facebook-f"></i></a>
