--- a/achievements-page.html
+++ b/achievements-page.html
@@ -576,7 +576,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li><a href="mailto:info@edentu.com">info@edentu.com</a></li>
                 <li><a href="tel:+919207444480">+91 9207 444 480</a></li>
                 <li><b>Address:</b><br>
-                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED, 14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
+EDENTU LEARNING SOLUTIONS PRIVATE LIMITED,</b><br> Ground Floor, Crezenta Plaza, NH, Edappal junction, Malappuram - 679576</li>
+
+
+
                 </li>
               </ul>
             </div>
