--- a/contact.html
+++ b/contact.html
@@ -409,7 +409,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     />
                   </div>
                   <div class="contact__text">
-                    <h5>Edentu Learning Solutions Private Limited, 14/291 N, Suit 61 A, First Floor, A Square, Kuzhivelippady, Cochin, Kerala-683561</h5>
+EDENTU LEARNING SOLUTIONS PRIVATE LIMITED,</b><br> Ground Floor, Crezenta Plaza, NH, Edappal junction, Malappuram - 679576</li>
+
                   </div>
                 </div>
                 <div class="single-contact-box d-flex align-items-center  cb-2 mb-30" style="flex-wrap: wrap;">
@@ -485,7 +486,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li><a href="mailto:info@edentu.com">info@edentu.com</a></li>
                 <li><a href="tel:+919207444480">+91 9207 444 480</a></li>
                 <li><b>Address:</b><br>
-                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED 14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
+                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED,</b><br> Ground Floor, Crezenta Plaza, NH, Edappal junction, Malappuram - 679576</li>
                 </li>
               </ul>
             </div>
