--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1056,6 +1061,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1107,6 +1117,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1158,6 +1173,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1208,6 +1228,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1259,6 +1284,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1386,6 +1416,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1428,6 +1463,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1479,6 +1519,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1530,6 +1575,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1570,16 +1620,21 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
               </div>
             </div>
             <div class="col-lg-4 col-md-6 grid-item course-card cat2">
-              <div class="z-gallery mb-30">
+              <div class="z-gallery mb-30" >
                 <div class="z-gallery__thumb hovered mb-20">
-                  <a 
+                  <a
                     ><img
                       class="img-fluid"
                       src="assets/img/course/course-banner3.png"
                       alt=""
-                  /></a>
+                  />
+                </a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -1631,6 +1686,11 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                   /></a>
 
                   <div class="heart-icon"><i class="fas fa-heart"></i></div>
+                  <div style="color: white; font-size: 14px; font-weight: 700; position: absolute; left: 2px; top: 15px; border: 1px solid white; border-radius: 5px; padding: 5px; cursor: pointer;">
+                    <button onclick="window.location.href='https://courses.edentu.com/';" style="border: none;background-color: transparent; color: white;">Purchase Now</button>
+                    <i class="fas fa-shopping-cart"></i>
+                  </div>
+
                 </div>
                 <div class="z-gallery__content">
                   <div class="course__tag mb-15">
@@ -2124,8 +2184,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                 <li><a href="mailto:info@edentu.com">info@edentu.com</a></li>
                 <li><a href="tel:+919207444480">+91 9207 444 480</a></li>
                 <li><b>Address:</b><br>
-                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED, 14/291 N, Suit 61 A, First Floor, A Square, Edathala PO, Kuzhivelippady, Cochin, Kerala-683561
-                </li>
+                EDENTU LEARNING SOLUTIONS PRIVATE LIMITED,</b><br> Ground Floor, Crezenta Plaza, NH, Edappal junction, Malappuram - 679576</li>
               </ul>
             </div>
           </div>
