Update course titles from FIRST YEAR to FINAL YEAR

--- a/index.html
+++ b/index.html
@@ -1239,7 +1239,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     <span>BDS Tuition Program</span>
                   </div>
                   <h4 class="sub-title mb-20">
-                    <a >FIRST YEAR PART-1</a>
+                    <a >FINAL YEAR PART-1</a>
                   </h4>
 
                   <ul class="course__meta content__1">
@@ -1295,7 +1295,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     <span>BDS Tuition Program</span>
                   </div>
                   <h4 class="sub-title mb-20">
-                    <a >FIRST YEAR PART-2</a>
+                    <a >FINAL YEAR PART-2</a>
                   </h4>
 
                   <ul class="course__meta content__1">
@@ -1641,7 +1641,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     <span>BDS Tuition Program</span>
                   </div>
                   <h4 class="sub-title mb-20">
-                    <a >FIRST YEAR PART-1</a>
+                    <a >FINAL YEAR PART-1</a>
                   </h4>
 
                   <ul class="course__meta content__1">
@@ -1697,7 +1697,7 @@ Swipe to explore&nbsp;<i class="fa fa-long-arrow-right"></i>
                     <span>BDS Tuition Program</span>
                   </div>
                   <h4 class="sub-title mb-20">
-                    <a >FIRST YEAR PART-2</a>
+                    <a >FINAL YEAR PART-2</a>
                   </h4>
 
                   <ul class="course__meta content__1">
